[gd_scene load_steps=6 format=2]

[ext_resource path="res://font/TraditionalChineseHK/SourceHanSansHC-Medium.otf" type="DynamicFontData" id=1]
[ext_resource path="res://TextGame.gd" type="Script" id=2]
[ext_resource path="res://Audio/BGM/欢快.ogg" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 100
outline_size = 10
outline_color = Color( 0.835294, 0.117647, 0.117647, 1 )
font_data = ExtResource( 1 )

[node name="StartUI" type="Node2D"]
script = ExtResource( 2 )

[node name="ButtonStart" type="Button" parent="."]
margin_left = 388.0
margin_top = 297.0
margin_right = 608.0
margin_bottom = 416.0
rect_pivot_offset = Vector2( 142, 95 )
custom_fonts/font = SubResource( 1 )
text = "遊戲開始"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonQuit" type="Button" parent="."]
margin_left = 386.0
margin_top = 452.0
margin_right = 606.0
margin_bottom = 571.0
rect_pivot_offset = Vector2( 142, 95 )
custom_fonts/font = SubResource( 1 )
text = "遊戲退出"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 310.0
margin_top = 71.0
margin_right = 710.0
margin_bottom = 216.0
custom_fonts/font = SubResource( 2 )
text = "遊戲測試"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[connection signal="mouse_entered" from="ButtonStart" to="." method="_on_ButtonStart_mouse_entered"]
[connection signal="mouse_exited" from="ButtonStart" to="." method="_on_ButtonStart_mouse_exited"]
[connection signal="pressed" from="ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
